# nbaide

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/nbaide/: __init__.py  _cli.py  _convert.py  _install.py  _lint.py  _manifest.py  _pandas.py  _read.py  _safe_json.py
src/nbaide/formatters/: __init__.py  _matplotlib.py  _numpy.py  _pandas.py  _plotly.py
tests/: test_install.py  test_lint.py  test_manifest.py  test_matplotlib.py  test_numpy.py  test_pandas.py  test_plotly.py  test_read.py  test_register.py
