[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbaide"
version = "0.2.0"
description = "Dual-rendering for Jupyter notebook outputs — rich visuals for humans, structured data for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Isaac Gerber", email = "igerber@users.noreply.github.com" },
]
keywords = ["jupyter", "notebook", "ai", "agent", "repr", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ipython>=8.0",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "matplotlib>=3.5",
    "plotly>=5.0",
    "build>=1.0",
    "twine>=5.0",
]
matplotlib = ["matplotlib>=3.5"]
plotly = ["plotly>=5.0"]
sklearn = ["scikit-learn>=1.0"]
all = [
    "matplotlib>=3.5",
    "plotly>=5.0",
    "scikit-learn>=1.0",
]

[project.scripts]
nbaide = "nbaide._cli:main"

[project.urls]
Homepage = "https://github.com/igerber/nbaide"
Repository = "https://github.com/igerber/nbaide"
Issues = "https://github.com/igerber/nbaide/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
